--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: any
+  http:
   flutter_bloc: any
   bottom_navy_bar: ^6.0.0
   google_fonts: ^2.3.1
+  shimmer: ^2.0.0
   eva_icons_flutter: ^3.1.0
+  scrollable_positioned_list: ^0.2.3
 
 dev_dependencies:
   flutter_test:
